headerfix.css: fix for latest Hattrick changes.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5652 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/headerfix_std_rtl.css
+++ b/content/resources/css/headerfix_std_rtl.css
@@ -44,15 +44,15 @@ z-index: 0 !important;
 /* STADIONIMAGEFIX */
 
 /*part 2 not needed now
-#aspnetForm[action*="Default.aspx?ArenaID="]   div#ctl00_CPMain_pnlMain>div.mainBox {
+#aspnetForm[action*="Default.aspx?ArenaID="]   div#ctl00_ctl00_CPContent_CPMain_pnlMain>div.mainBox {
 margin-top:-420px !important;
 }
 
-#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_CPMain_pnlMain>div.mainBox table {
+#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_ctl00_CPContent_CPMain_pnlMain>div.mainBox table {
 margin-top:-360px !important;
 }
 
-#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_CPMain_pnlMain>div.arenaInfo {
+#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_ctl00_CPContent_CPMain_pnlMain>div.arenaInfo {
 margin-top:100px !important;
 }
 
