--- a/content/resources/css/headerfix.css
+++ b/content/resources/css/headerfix.css
@@ -59,19 +59,19 @@ padding-right: 10px;
 /* STADIONIMAGEFIX */
 
 /* part 2 not needed now
-#aspnetForm[action*="Default.aspx?ArenaID="] div#ctl00_CPMain_pnlMain>h1.hasByline {
+#aspnetForm[action*="Default.aspx?ArenaID="] div#ctl00_ctl00_CPContent_CPMain_pnlMain>h1.hasByline {
 margin-top:-125px !important;
 }
 
-#aspnetForm[action*="Default.aspx?ArenaID="] div#ctl00_CPMain_pnlMain>div.mainBox {
+#aspnetForm[action*="Default.aspx?ArenaID="] div#ctl00_ctl00_CPContent_CPMain_pnlMain>div.mainBox {
 margin-top:-475px !important;
 }
 
-#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_CPMain_pnlMain>div.mainBox table {
+#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_ctl00_CPContent_CPMain_pnlMain>div.mainBox table {
 margin-top:-425px !important;
 }
 
-#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_CPMain_pnlMain>div.arenaInfo {
+#aspnetForm[action*="Default.aspx?ArenaID="]  div#ctl00_ctl00_CPContent_CPMain_pnlMain>div.arenaInfo {
 width:180px !important;
 float:right !important;
 margin-top:-260px !important;
