staff-marker.css: specify full chrome://... path.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5674 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/staff-marker.css
+++ b/content/resources/css/staff-marker.css
@@ -2,19 +2,19 @@
    so that the last declared one wins. */
 
 .ft-staff-hty {
-	background-image: url("../img/staff/hyouthclub.png");
+	background-image: url("chrome://foxtrick/content/resources/img/staff/hyouthclub.png");
 	background-repeat: no-repeat;
 	padding: 1px 1px 1px 18px !important;
 }
 
 .ft-staff-foxtrick {
-	background-image: url("../img/staff/foxtrick.png");
+	background-image: url("chrome://foxtrick/content/resources/img/staff/foxtrick.png");
 	background-repeat: no-repeat;
 	padding: 1px 1px 1px 18px !important;
 }
 
 .ft-staff-chpp-holder {
-	background-image: url("../img/staff/chpp.png");
+	background-image: url("chrome://foxtrick/content/resources/img/staff/chpp.png");
 	background-repeat: no-repeat;
 	padding: 1px 1px 1px 24px !important;
 }
