--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -97,7 +97,7 @@ ul#tabs li
 	display: inline-block;
 	background-color: white;
 	border: 1px solid #ccc;
-	-moz-border-radius: 8px 8px 0px 0px;
+	border-radius: 8px 8px 0px 0px;
 	border-bottom: none;
 	padding: 4px;
 	margin: 0;
