Forum_Link_Grey_Icons fix for production server
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5752 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/fixes/Forum_Link_Grey_Icons.css
+++ b/content/resources/css/fixes/Forum_Link_Grey_Icons.css
@@ -15,8 +15,16 @@
 .cfFooter a[href*="/Forum/Write.aspx?actionTypeWrite=edit&t="]{
   background-image: url("chrome://foxtrick/content/resources/img/forum-grey/forum_grey_edit.png");
 }
+.cfFooter a[href*="/Forum/Write.aspx?actionType=edit&t="]{
+  background-image: url("chrome://foxtrick/content/resources/img/forum-grey/forum_grey_edit.png");
+}
+
 
 .cfFooter a[href*="/Forum/Functions.aspx?actionTypeFunctions=delete&t="]{
+  background-image: url("chrome://foxtrick/content/resources/img/forum-grey/forum_grey_del.png");
+}
+
+.cfFooter a[href*="/Forum/Functions.aspx?actionType=delete&t="]{
   background-image: url("chrome://foxtrick/content/resources/img/forum-grey/forum_grey_del.png");
 }
 
@@ -25,6 +33,9 @@
 }
 
 .cfFooter a[href*="/Forum/Functions.aspx?actionTypeFunctions=ignore&t="]{
+  background-image: url("chrome://foxtrick/content/resources/img/forum-grey/forum_grey_ignore.png");
+}
+.cfFooter a[href*="/Forum/Functions.aspx?actionType=ignore&t="]{
   background-image: url("chrome://foxtrick/content/resources/img/forum-grey/forum_grey_ignore.png");
 }
 .cfFooter .foxtrick-signaturetoggle{
@@ -42,9 +53,12 @@
 .cfFooter a[href*="/Forum/Functions.aspx?actionTypeFunctions=reportmessage&t="],
 .cfFooter a[href*="/Forum/Write.aspx?t="],
 .cfFooter a[href*="/Forum/Write.aspx?actionTypeWrite=edit&t="],
-.cfFooter a[href*="/Forum/Functions.aspx?actionTypeFunctions=delete&t="],
+.cfFooter a[href*="/Forum/Write.aspx?actionType=edit&t="],
+.cfFooter a[href*="/Forum/Functions.aspx?actionTypeFunctions=delete&t="], 
+.cfFooter a[href*="/Forum/Functions.aspx?actionType=delete&t="],
 .cfFooter a[href*="/MyHattrick/Bookmarks/Default.aspx?actionType=add&BookmarkTypeID=4&ObjectID="],
 .cfFooter a[href*="/Forum/Functions.aspx?actionTypeFunctions=ignore&t="],
+.cfFooter a[href*="/Forum/Functions.aspx?actionType=ignore&t="],
 .cfFooter .foxtrick-signaturetoggle,
 .cfFooter .foxtrick-unreadlink,
 .cfFooter .foxtrick-copyfromarchive
