--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -46,7 +46,7 @@ ul.ft-popup-list > li:hover {
 #ticker div ul.ft-popup-list, div.message span.myht1:hover ul.ft-popup-list, div.signature-trunc span.myht1:hover ul.ft-popup-list {
 	display: none;
 }
-div.cfMessage, div.edited, div.cfHeader, div.feedItem, div.cfUserInfo, div.signature, div.playerInfo {
+div.cfMessage, div.edited, div.cfHeader, div.feedItem, div.cfUserInfo, div.signature, div.playerInfo, .alert {
 	overflow: visible !important;
 }
 div.message {
