Stage FT warning  icon
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5846 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick_stage.css
+++ b/content/resources/css/foxtrick_stage.css
@@ -1,1 +1,1 @@
-#stageLogo {padding-bottom:0px !important; margin-top:-15px!important; height:60px !important; background-image: url('chrome://foxtrick/content/resources/img/logo_green_stage_foxtrick.png') !important;}
+#stageLogo {background-image: url('chrome://foxtrick/content/resources/img/logo_green_stage_foxtrick.png') !important;}
