--- a/content/resources/css/foxtrick_stage_simple.css
+++ b/content/resources/css/foxtrick_stage_simple.css
@@ -1,2 +1,2 @@
-#stageLogo {top:3px !important; padding-bottom: 5px !important; height:50px !important; background-image: url('chrome://foxtrick/content/resources/img/logo_green_stage_foxtrick_simple.png') !important;}
-#stageLogo ~ #teamLinks , #stageLogo ~ #time , #stageLogo ~ #online, #stageLogo ~ #ft_rapidid {margin-top:0px !important;}
+#stageLogo {background-image: url('chrome://foxtrick/content/resources/img/logo_green_stage_foxtrick_simple.png') !important;}
+
