Use goToElementById() to go to elements for fixing when HeaderFix is enabled.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5873 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-report.css
+++ b/content/resources/css/match-report.css
@@ -67,4 +67,5 @@ tr>td a.ft-match-report-scoreboard {
 	color: black !important;
 	text-decoration: none;
 	white-space: nowrap;
+	cursor: pointer;
 }
