Add version in preferences page.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5883 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -111,6 +111,14 @@ html[dir="rtl"] .screenshot
 	clear: both;
 }
 
+#version
+{
+	font-family: Georgia;
+	font-style: italic;
+	font-size: 50%;
+	vertical-align: top;
+}
+
 ul#tabs li
 {
 	display: inline-block;
