Align to right for CopyPosting because there may be scroll bar.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5916 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -163,6 +163,9 @@ ul.ft-pop {
 	list-style-type: none;
 	z-index: 100;
 }
+ul.ft-pop.right {
+	right: 0px;
+}
 .ft-pop-up-container:hover > ul.ft-pop {
 	display: block;
 }
