--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -139,6 +139,7 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 
 /* pop lists that are displayed when hovering */
 .ft-pop-up-container {
+	position: relative;
 	display: inline-block;
 	cursor: pointer;
 }
@@ -165,6 +166,9 @@ ul.ft-pop {
 }
 ul.ft-pop.right {
 	right: 0px;
+}
+ul.ft-pop.top {
+	top: 0px;
 }
 .ft-pop-up-container:hover > ul.ft-pop {
 	display: block;
