Rename HighlightBotTeams to HighlightOwnerless and change default icon.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5953 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/user-content-example.css
+++ b/content/resources/css/user-content-example.css
@@ -44,10 +44,10 @@
 }
 
 
-/* Module HighlightBotTeams */
+/* Module HighlightOwnerless */
 
-/* the link to bot teams at league page */
-.ft-bot {
+/* the link to ownerless teams at league page */
+.ft-ownerless {
 	color: white !important;
 	background-color: gray;
 }
