--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -3,6 +3,9 @@
 
 #stageLogo {background-image: url('chrome://foxtrick/content/resources/img/logo_green_stage_foxtrick.png') !important;}
 
+/* faux-link */
+.ft-link { cursor: pointer; }
+
 /* icons and hover icons */
 .ft_actionicon {cursor: pointer; height: 16px; background: 50% no-repeat; }
 .ft_icon {width: 16px; height: 16px; background: 50% no-repeat; }
